--- a/spring-data-jsp-mvc/build.gradle
+++ b/spring-data-jsp-mvc/build.gradle
@@ -10,15 +10,25 @@ buildscript {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+		classpath "org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}"
 	}
 }
 
 apply plugin: 'kotlin'
+apply plugin: "kotlin-allopen"
+apply plugin: "kotlin-noarg"
+apply plugin: 'kotlin-jpa'
 apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'war'
 
+noArg {
+	annotation("cn.net.pikachu.NoArg")
+}
+allOpen {
+	annotation("cn.net.pikachu.AllOpen")
+}
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 compileKotlin {
@@ -47,7 +57,7 @@ dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
 	compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
 	runtime('org.springframework.boot:spring-boot-devtools')
-	runtime('mysql:mysql-connector-java')
-	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
+	compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+	compile('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
