--- a/spring-data-jsp-mvc/src/main/resources/application.properties
+++ b/spring-data-jsp-mvc/src/main/resources/application.properties
@@ -2,7 +2,7 @@ logging.level.log.org.springframework.web=DEBUG
 
 spring.profiles.active=dev
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/mypetstore?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jpetstore?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
 #spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
